# reset-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  state_file.state
api/: connect4API.py  mazeAPI.py  sokobanAPI.py  tetrisAPI.py  tictactoeAPI.py
asset/: levels.json
commands/: connect4.py  economy.py  helloworld.py  maze.py  pokemonred.py  smash_pass.py  sokoban.py  tetris.py
need some work/: tictactoe.py
saves/: 424133185123647488.state  754033245972201612.state
